crates/toml_edit/tests/fixtures/invalid/bool/mixed-case.stderr
TOML parse error at line 1, column 9
  |
1 | valid = False
  |         ^
Invalid string
Expected `"`, `'`
